tests/ucc/type/good/ptr-op-vs-int.c
int main(void)
{
    int *b;
    int a = 1;

    b = b + a;
    b = b - a;

    return 0;
}
